--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.19.26",
+    "date-fns": "^2.16.0",
+    "gray-matter": "^4.0.2",
+    "highlight.js": "^10.1.2",
     "next": "9.3.5",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-typist": "^2.0.5",
+    "rehype": "^11.0.0",
+    "rehype-highlight": "^4.0.0",
+    "remark": "^12.0.1",
+    "remark-highlight.js": "^6.0.0",
+    "remark-html": "^12.0.0",
+    "terminal-in-react": "^4.3.1",
+    "typeface-poppins": "0.0.72"
   }
 }
