--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export",
+    "deploy": "next build && next export && touch out/.nojekyll&& touch out/CNAME && echo \"kendric.dev\" >> out/CNAME && git add out/ && git commit -m \"Deploy to gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.19.26",
     "date-fns": "^2.16.0",
+    "gh-pages": "^3.1.0",
     "gray-matter": "^4.0.2",
     "highlight.js": "^10.1.2",
     "next": "9.3.5",
@@ -21,6 +24,7 @@
     "remark": "^12.0.1",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^12.0.0",
+    "rimraf": "^3.0.2",
     "terminal-in-react": "^4.3.1",
     "typeface-poppins": "0.0.72"
   }
