--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "learn-starter",
+  "homepage": "http://k3ndr1c.github.io/kendric.dev",
+  "name": "kendric's personal site",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "deploy": "next build && next export && touch out/.nojekyll && touch out/CNAME && echo \"example.com\" >> out/CNAME && git add out/ && git commit -m \"Deploy to gh-pages\" && git subtree push --prefix out origin gh-pages"
+    "deploy": "next build && next export && touch out/.nojekyll && touch out/CNAME && echo \"kendric.dev\" >> out/CNAME && git add out/ && git commit -m \"Deploy to gh-pages\" && git subtree push --prefix out origin gh-pages"
     },
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.19.26",
