--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://k3ndr1c.github.io/kendric.dev",
-  "name": "kendric's personal site",
+  "name": "kendric.dev",
   "version": "0.1.0",
   "private": true,
   "scripts": {
