--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "first-deploy": "next build && next export && touch out/.nojekyll && touch out/CNAME && echo \"kendric.dev\" >> out/CNAME && git add out/ && git commit -m \"Deploy to gh-pages\" && git subtree push --prefix out origin gh-pages",
-    "deploy": "next build && next export && git add out/ && git commit -m \"Deploy to gh-pages\" && git subtree push --prefix out origin gh-pages"
+    "deploy": "next build && next export && touch out/.nojekyll && touch out/CNAME && echo \"kendric.dev\" >> out/CNAME && git add out/ && git commit -m \"Deploy to gh-pages\" && git subtree push --prefix out origin gh-pages",
     },
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.19.26",
